--- a/src/MetricService.Domain/MetricService.Domain.csproj
+++ b/src/MetricService.Domain/MetricService.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.7.1" />
+  </ItemGroup>
+
 </Project>
