--- a/src/MetricService.Application/MetricService.Application.csproj
+++ b/src/MetricService.Application/MetricService.Application.csproj
@@ -6,4 +6,21 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\UploadFile\Queries\" />
+    <Folder Include="Features\Results\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MetricService.Contracts\MetricService.Contracts.csproj" />
+    <ProjectReference Include="..\MetricService.Domain\MetricService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
